crates/tui/snapshots/inline/modal/managed_worktree_delete_confirmation_inline_chinese.snap
---
source: crates/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
                                                                                                    
    ▄  ▄     Ash Code v0.1.0                                                                        
  ▗█▛██▜█▖   Automatic model                                                                        
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ 项 目 工 作 树  › 删 除 会 话 及 工 作 树  ────────────────────────────────────────────────────────────────────
                                                                                                    
  删 除 此 会 话 、 其 工 作 树 及 未 提 交 的 改 动 。                                                               
> /worktrees/managed                                                                                
                                                                                                    
  Enter 删 除   ·  Esc 返 回
