crates/tui/snapshots/inline/modal/managed_worktree_deleted_inline_chinese.snap
---
source: crates/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
                                                                                                    
    ▄  ▄     Ash Code v0.1.0                                                                        
  ▗█▛██▜█▖   Automatic model                                                                        
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ 项 目 工 作 树  ───────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ 搜 索 工 作 树                                                                                    │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
  会 话 及 工 作 树 已 删 除 。                                                                               
  新 建 工 作 树   ·  基 于  HEAD 创 建  · 不 启 动 会 话                                                         
> repo  ·  当 前  · main · /repo                                                                      
                                                                                                    
  n 新 建 工 作 树  · d 删 除  · / 搜 索  · Esc 关 闭
