crates/tui/snapshots/inline/modal/memories_inline_management.snap
---
source: crates/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
                                                                                                    
    ▄  ▄     Ash Code v0.1.0                                                                        
  ▗█▛██▜█▖   Automatic model                                                                        
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ Memories ─────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
   Personal    Projects                                                                             
> + New Memory                                                                                      
  Memories off · c Config                                                                           
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Search this scope                                                                            │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
  No memories yet.                                                                                  
                                                                                                    
  Enter new · ↓ search · Tab tabs · Esc close
