crates/tui/snapshots/inline/modal/project_branch_creation_inline.snap
---
source: crates/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
                                                                                                    
    ▄  ▄     Ash Code v0.1.0                                                                        
  ▗█▛██▜█▖   Automatic model                                                                        
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ Project branches › New branch ────────────────────────────────────────────────────────────────────
                                                                                                    
  Create branch                                                                                     
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ ash/                                                                                         │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
  Create a branch at HEAD without switching worktrees.                                              
                                                                                                    
  Enter to create  ·  Esc to back
