crates/tui/snapshots/inline/modal/project_branch_deleted_inline_chinese.snap
---
source: crates/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
                                                                                                    
    ▄  ▄     Ash Code v0.1.0                                                                        
  ▗█▛██▜█▖   Automatic model                                                                        
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ 项 目 分 支  ─────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ 搜 索 分 支                                                                                      │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
  分 支 已 删 除 。                                                                                       
  新 建 分 支   ·  基 于  HEAD · 不 切 换 工 作 树                                                              
  项 目 分 支                                                                                           
> main  ·  当 前                                                                                      
                                                                                                    
  b 新 建 分 支  · d 删 除  · / 搜 索  · Esc 关 闭
